Added icon in title bar

--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Bezpieczny Bank</title>
+	<meta name="viewport" content="width=device-width,  initial-scale=1.0">
+    <link rel="shortcut icon" type="image/x-icon"  href="favicon.ico"/>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 	<link rel="stylesheet" type="text/css" href="bower_components/skeleton/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="bower_components/jquery-ui/themes/base/jquery-ui.min.css">
 	<link rel="stylesheet" type="text/css" href="bower_components/skeleton/css/skeleton.css">
 	<link rel="stylesheet" type="text/css" href="bower_components/font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+    <title>Safe Bank</title>
 </head>
 <body>
 
